fixes white space wrapping on page title

--- a/source/less/core/_typography.less
+++ b/source/less/core/_typography.less
@@ -70,6 +70,7 @@ pre, .pre {}
 .page-title {
   .h3;
   .scale-font(@baseFontSize, @baseFontSize * 1.1, @maxContentWidth);
+  white-space: nowrap;
 }
 
 // Links inside paragraphs
